-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21
-
Component/s: hotspot
-
b23
-
ppc, aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8349983 | 21.0.7 | Matthias Baesken | P4 | Resolved | Fixed | b03 |
I tested both {release, fastdebug} on {clang-11, clang-12, clang-14, clang-15} + aarch64 + ubuntu-22.04. The following error log would be generated.
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_os_linux_aarch64.o:
~/jdk_src/src/hotspot/os_cpu/linux_aarch64/os_linux_aarch64.cpp:266:62: error: format string is not a string literal [-Werror,-Wformat-nonliteral]
VMError::report_and_die(thread, uc, nullptr, 0, msg, detail_msg, va_dummy);
^~~~~~~~~~
1 error generated.
* All command lines available in ~/build-fastdebug/make-support/failure-logs.
=== End of repeated output ===
Note-1: I tested on clang-14+aarch64+macos, and the JDK build can pass.
Note-2: I think it's a common issue. ppc or riscv should be affected as well. Unfortunately, I didn't have the hardware on hand.
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_os_linux_aarch64.o:
~/jdk_src/src/hotspot/os_cpu/linux_aarch64/os_linux_aarch64.cpp:266:62: error: format string is not a string literal [-Werror,-Wformat-nonliteral]
VMError::report_and_die(thread, uc, nullptr, 0, msg, detail_msg, va_dummy);
^~~~~~~~~~
1 error generated.
* All command lines available in ~/build-fastdebug/make-support/failure-logs.
=== End of repeated output ===
Note-1: I tested on clang-14+aarch64+macos, and the JDK build can pass.
Note-2: I think it's a common issue. ppc or riscv should be affected as well. Unfortunately, I didn't have the hardware on hand.
- backported by
-
JDK-8349983 AArch64: Build failure with clang due to -Wformat-nonliteral warning
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/439ed046
-
Commit(master)
openjdk/jdk21u-dev/072651a6
-
Review
openjdk/jdk/16486
-
Review(master)
openjdk/jdk21u-dev/1401