8319233: AArch64: Build failure with clang due to -Wformat-nonliteral warning

Reviewed-by: kbarrett, eastigeevich